[RTL]: fixed ScrollBars

--- a/uui-components/src/layout/ScrollBars.module.scss
+++ b/uui-components/src/layout/ScrollBars.module.scss
@@ -47,7 +47,3 @@
         bottom: 2px;
     }
 }
-
-*[dir='rtl'] .root > div[aria-orientation='vertical'], .root[dir='rtl']  > div[aria-orientation='vertical'] {
-    right: 17px !important;
-}
